--- a/public/style/styling.css
+++ b/public/style/styling.css
@@ -2,10 +2,6 @@
     background-color: rgb(212 212 216);
 } */
 
-hr {
-    color: rgb(82 82 91);
-}
-
 /* .backimg {
     background-image: url('../../img/orangeboho.jpg');
     background-repeat: repeat;
@@ -14,3 +10,11 @@ hr {
 /* .orange {
     background-color: rgb(23, 23, 223);
 } */
+ body {
+    overflow: hidden;
+ }
+ 
+.line {
+    border-right: 2px solid rgb(161 161 170);
+    height: 100%;
+}
